welcome.lessons.welcome.array.island.Island.scala.error
island:11: error: Int.type does not take parameters
  var test:Int = Int(res)
                    ^island:12: error: type mismatch;
 found   : Float
 required: Int
  return res
         ^